# slv_phs_tsk_web

./: .gitignore  README.md  pyproject.toml  run.py
src/: __init__.py  account.py  database.py  models.py  postgres.py  sockets.py  solver.py  views.py
src/static/: package.json  webpack.config.js
src/static/src/: app.js  app.jsx  auth.js  index.html  index.js  index.jsx  main.jsx  menu.js  socket.js  task_clsgrv.js  task_panel.js  toolkit.js
src/static/src/authorization/: auth.jsx  inputs.jsx
src/static/src/dashboard/: navigation.jsx
src/static/src/manager/: dialogs.jsx  manager.jsx  tools.jsx
src/static/src/patterns/: inputs.jsx  placeholders.jsx
src/static/src/routes/: errors.jsx  router.jsx
src/static/src/store/: authorizedSlice.jsx  store.jsx
src/static/src/tasks/gravitation/: description.jsx  initialize.jsx
tests/: conftest.py  test_database.py  test_login.py  test_postgresql.py
