[tool.poetry]
name = "slv-phs-tsk-web"
version = "0.1.0"
description = ""
authors = ["kotwiceal <kotvitskyaya@gmail.com>"]
readme = "README.md"
packages = [{include = "slv_phs_tsk_web"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"